improving the SEO

--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -6,6 +6,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ZOZO Sécurité vous propose des offres tout inclus comprenant l'installation de votre système d'alarme sans fil, la garantie 2 ans, sans mensualité, sans engagement. Installation rapide sous 24h-48h à Montpellier.">
+
+    <!-- SEO Meta Tags -->
+    <meta name="keywords" content="alarme montpellier, installation alarme, alarme sans fil, alarme maison montpellier, alarme appartement, système sécurité, vidéosurveillance montpellier, alarme entreprise">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <link rel="canonical" href="https://zozosecurite.fr/alarme/installation-alarme-montpellier.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://zozosecurite.fr/alarme/installation-alarme-montpellier.html">
+    <meta property="og:title" content="Alarme Montpellier | Système sécurité alarme / vidéo">
+    <meta property="og:description" content="ZOZO Sécurité vous propose des offres tout inclus comprenant l'installation de votre système d'alarme sans fil, la garantie 2 ans, sans mensualité, sans engagement. Installation rapide sous 24h-48h à Montpellier.">
+    <meta property="og:image" content="https://zozosecurite.fr/alarme/installation-alarme-maison-montpellier.webp">
+    <meta property="og:locale" content="fr_FR">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://zozosecurite.fr/alarme/installation-alarme-montpellier.html">
+    <meta name="twitter:title" content="Alarme Montpellier | Système sécurité alarme / vidéo">
+    <meta name="twitter:description" content="ZOZO Sécurité vous propose des offres tout inclus comprenant l'installation de votre système d'alarme sans fil, la garantie 2 ans, sans mensualité, sans engagement. Installation rapide sous 24h-48h à Montpellier.">
+    <meta name="twitter:image" content="https://zozosecurite.fr/alarme/installation-alarme-maison-montpellier.webp">
+
     <link rel="stylesheet" href="../css/styles.css?v=2.1">
     <link rel="stylesheet" href="../css/navigation.css?v=2.0">
     <link rel="stylesheet" href="alarm.css?v=1.0">
@@ -1164,153 +1185,5 @@
 
     <!-- JavaScript -->
     <script src="alarm.js"></script>
-    <script>
-        // Testimonials Carousel
-        const track = document.querySelector('.testimonials-track');
-        const cards = Array.from(track.children);
-        const prevBtn = document.getElementById('prevBtn');
-        const nextBtn = document.getElementById('nextBtn');
-        const dotsContainer = document.getElementById('carouselDots');
-
-        let currentIndex = 0;
-        const cardsPerView = 3;
-        const totalPages = Math.ceil(cards.length / cardsPerView);
-
-        // Create dots
-        for (let i = 0; i < totalPages; i++) {
-            const dot = document.createElement('button');
-            dot.classList.add('carousel-dot');
-            if (i === 0) dot.classList.add('active');
-            dot.addEventListener('click', () => goToPage(i));
-            dotsContainer.appendChild(dot);
-        }
-
-        const dots = Array.from(dotsContainer.children);
-
-        function updateCarousel() {
-            const cardWidth = cards[0].offsetWidth;
-            const gap = 24; // 1.5rem gap
-            const offset = currentIndex * cardsPerView * (cardWidth + gap);
-            track.style.transform = `translateX(-${offset}px)`;
-
-            // Update dots
-            dots.forEach((dot, index) => {
-                dot.classList.toggle('active', index === currentIndex);
-            });
-
-            // Update button states
-            prevBtn.disabled = currentIndex === 0;
-            nextBtn.disabled = currentIndex >= totalPages - 1;
-        }
-
-        function goToPage(pageIndex) {
-            currentIndex = Math.max(0, Math.min(pageIndex, totalPages - 1));
-            updateCarousel();
-        }
-
-        prevBtn.addEventListener('click', () => {
-            if (currentIndex > 0) {
-                currentIndex--;
-                updateCarousel();
-            }
-        });
-
-        nextBtn.addEventListener('click', () => {
-            if (currentIndex < totalPages - 1) {
-                currentIndex++;
-                updateCarousel();
-            }
-        });
-
-        // Update on resize
-        window.addEventListener('resize', updateCarousel);
-        updateCarousel();
-
-        // Sticky CTA button functionality
-        const stickyCTA = document.getElementById('stickyCTA');
-        const heroSection = document.querySelector('.hero-section');
-        const footer = document.querySelector('.alarm-footer');
-
-        window.addEventListener('scroll', function() {
-            if (heroSection && footer) {
-                const heroBottom = heroSection.offsetTop + heroSection.offsetHeight;
-                const footerTop = footer.offsetTop;
-                const scrollPosition = window.scrollY + window.innerHeight;
-
-                // Show CTA after hero, but hide when reaching footer
-                if (window.scrollY > heroBottom && scrollPosition < footerTop + 100) {
-                    stickyCTA.classList.add('visible');
-                } else {
-                    stickyCTA.classList.remove('visible');
-                }
-            }
-        });
-
-        // FAQ Accordion functionality
-        const faqItems = document.querySelectorAll('.faq-item');
-
-        faqItems.forEach(item => {
-            const question = item.querySelector('.faq-question');
-
-            question.addEventListener('click', () => {
-                const isActive = item.classList.contains('active');
-
-                // Close all other FAQ items
-                faqItems.forEach(otherItem => {
-                    if (otherItem !== item) {
-                        otherItem.classList.remove('active');
-                    }
-                });
-
-                // Toggle current item
-                if (isActive) {
-                    item.classList.remove('active');
-                } else {
-                    item.classList.add('active');
-                }
-            });
-        });
-
-        // Statistics Counter Animation
-        function animateCounter(element) {
-            const target = parseInt(element.getAttribute('data-target'));
-            const suffix = element.getAttribute('data-suffix');
-            const duration = 2000; // 2 seconds
-            const steps = 60;
-            const increment = target / steps;
-            let current = 0;
-
-            const timer = setInterval(() => {
-                current += increment;
-                if (current >= target) {
-                    element.textContent = target + suffix;
-                    clearInterval(timer);
-                } else {
-                    element.textContent = Math.floor(current) + suffix;
-                }
-            }, duration / steps);
-        }
-
-        // Intersection Observer for triggering animation when stats come into view
-        const statsObserver = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    const statNumbers = entry.target.querySelectorAll('.stat-number');
-                    statNumbers.forEach(statNumber => {
-                        animateCounter(statNumber);
-                    });
-                    statsObserver.unobserve(entry.target); // Only animate once
-                }
-            });
-        }, {
-            threshold: 0.5 // Trigger when 50% of the section is visible
-        });
-
-        // Observe the stats section
-        const statsSection = document.querySelector('.stats-section');
-        if (statsSection) {
-            statsObserver.observe(statsSection);
-        }
-    </script>
 </body>
 </html>
