fixing the devis page

--- a/alarme/devis-alarme.html
+++ b/alarme/devis-alarme.html
@@ -262,6 +262,29 @@
         </div>
     </section>
 
+    <!-- Phone Number Section -->
+    <section class="phone-section" id="phone-section" style="display: none;">
+        <h1 class="phone-title">Veuillez saisir votre numéro de téléphone :</h1>
+        <p class="phone-subtitle">Nous vous contacterons dans les prochaines minutes</p>
+
+        <div class="phone-input-container">
+            <input
+                type="tel"
+                class="phone-input"
+                placeholder="06 12 34 56 78"
+                maxlength="14"
+                id="phone-input"
+            >
+            <button class="phone-button" id="phone-button">
+                Obtenir mon devis
+                <svg class="button-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                    <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
+                    <path d="M8 12h8M12 8l4 4-4 4"/>
+                </svg>
+            </button>
+        </div>
+    </section>
+
     <script src="devis-alarme.js"></script>
 </body>
 </html>
