--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -564,7 +564,7 @@
 
             <!-- CTA Button -->
             <div class="hero-cta">
-                <a href="#" class="cta-button">
+                <a href="devis-alarme.html" class="cta-button">
                     COMMENCER MON DEVIS
                     <svg class="cta-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
                         <path d="M5 12h14M12 5l7 7-7 7"/>
