--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -5,7 +5,7 @@
     <title>Alarme Montpellier | Système sécurité alarme / vidéo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ZOZO Sécurité vous propose des offres tout inclus comprenant l'installation de votre système d'alarme sans fil, la garantie 2 ans, sans mensualité, sans engagement. Installation rapide sous 24h-48h à Montpellier.">
+    <meta name="description" content="ZOZO Sécurité, installation alarme Montpellier. Systèmes sans fil, télésurveillance, installation rapide. +500 installations Hérault. Devis gratuit : 07 67 56 39 26.">
 
     <!-- SEO Meta Tags -->
     <meta name="keywords" content="alarme montpellier, installation alarme, alarme sans fil, alarme maison montpellier, alarme appartement, système sécurité, vidéosurveillance montpellier, alarme entreprise">
