--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -9,8 +9,25 @@
 
     <!-- SEO Meta Tags -->
     <meta name="keywords" content="alarme montpellier, installation alarme, alarme sans fil, alarme maison montpellier, alarme appartement, système sécurité, vidéosurveillance montpellier, alarme entreprise">
-    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
     <link rel="canonical" href="https://zozosecurite.fr/alarme/installation-alarme-montpellier.html">
+
+    <!-- Performance & Technical SEO -->
+    <meta name="theme-color" content="#1a1a1a">
+    <meta http-equiv="Accept-Encoding" content="gzip, deflate, br">
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
+    <!-- Critical SEO Enhancement -->
+    <meta name="revised" content="2025-12-26">
+    <meta name="author" content="ZOZO Sécurité">
+    <meta name="geo.region" content="FR-34">
+    <meta name="geo.position" content="43.6352;3.9137">
+    <meta name="ICBM" content="43.6352, 3.9137">
+    <meta name="geo.placename" content="Castelnau-le-Lez, France">
+
+    <!-- Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -106,13 +123,13 @@
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
-            "reviewCount": "75",
+            "reviewCount": "100",
             "bestRating": "5",
             "worstRating": "1"
           },
           "areaServed": [
             {
-              "@type": "City"c,
+              "@type": "City",
               "name": "Montpellier"
             },
             {
@@ -477,7 +494,7 @@
         <div class="banner-container">
             <!-- Centered Logo -->
             <a href="#hero" class="banner-logo">
-                <img src="zozo16.9-no-background.webp" alt="Zozo Sécurité" class="banner-logo-img">
+                <img src="zozo16.9-no-background.webp" alt="Zozo Sécurité - Installateur Alarme Montpellier" class="banner-logo-img">
             </a>
 
             <!-- Phone Form on Right -->
@@ -527,7 +544,7 @@
             </h1>
 
             <div class="split-border-card">
-                <img src="icon/alarme-pour-apartment.svg" alt="Alarme pour appartement" class="card-icon">
+                <img src="icon/alarme-pour-apartment.svg" alt="Installation alarme appartement Montpellier" class="card-icon">
                 <div class="card-content-inner">
                     <h2 class="card-title">Je protège mon appartement</h2>
                     <a href="devis-alarme.html" class="card-button">
@@ -539,7 +556,7 @@
             </div>
 
             <div class="split-border-card">
-                <img src="icon/Alarme-maison.svg" alt="Alarme pour maison" class="card-icon">
+                <img src="icon/Alarme-maison.svg" alt="Installation alarme maison Montpellier" class="card-icon">
                 <div class="card-content-inner">
                     <h2 class="card-title">Je protège ma<br>maison</h2>
                     <a href="devis-alarme.html" class="card-button">
@@ -551,7 +568,7 @@
             </div>
 
             <div class="split-border-card">
-                <img src="icon/alarme-professionels-entreprise.svg" alt="Alarme pour entreprise" class="card-icon">
+                <img src="icon/alarme-professionels-entreprise.svg" alt="Installation alarme entreprise Montpellier" class="card-icon">
                 <div class="card-content-inner">
                     <h2 class="card-title">Je protège mon<br>entreprise</h2>
                     <a href="devis-alarme.html" class="card-button">
@@ -584,48 +601,48 @@
             <div class="logo-track">
                 <!-- First set of logos -->
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/Sephora_logo.svg" alt="Sephora">
+                    <img src="Client-alarme-zozosécurité/Sephora_logo.svg" alt="Sephora - Client alarme ZOZO Sécurité Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/lidl-alarme-montpellier.webp" alt="Lidl">
+                    <img src="Client-alarme-zozosécurité/lidl-alarme-montpellier.webp" alt="Lidl - Installation alarme magasin Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/aldi-alarme-maison-montpellier.webp" alt="Aldi">
+                    <img src="Client-alarme-zozosécurité/aldi-alarme-maison-montpellier.webp" alt="Aldi - Système alarme commerce Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/bvlgari-entreprise-alarme-montpellier.svg" alt="Bvlgari">
+                    <img src="Client-alarme-zozosécurité/bvlgari-entreprise-alarme-montpellier.svg" alt="Bvlgari - Alarme entreprise luxe Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/aramisauto-alarme-sans-fil.webp" alt="Aramis Auto">
+                    <img src="Client-alarme-zozosécurité/aramisauto-alarme-sans-fil.webp" alt="Aramis Auto - Alarme sans fil professionnel Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/BUT-installateur-alarme-sans-fil.webp" alt="BUT">
+                    <img src="Client-alarme-zozosécurité/BUT-installateur-alarme-sans-fil.webp" alt="BUT - Installation alarme commerce Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/le-kiosqueàpizza-installation-alarme-montpellier.svg" alt="Le Kiosque à Pizza">
+                    <img src="Client-alarme-zozosécurité/le-kiosqueàpizza-installation-alarme-montpellier.svg" alt="Le Kiosque à Pizza - Alarme restaurant Montpellier">
                 </div>
 
                 <!-- Duplicate set for infinite scroll -->
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/Sephora_logo.svg" alt="Sephora">
+                    <img src="Client-alarme-zozosécurité/Sephora_logo.svg" alt="Sephora - Client alarme ZOZO Sécurité Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/lidl-alarme-montpellier.webp" alt="Lidl">
+                    <img src="Client-alarme-zozosécurité/lidl-alarme-montpellier.webp" alt="Lidl - Installation alarme magasin Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/aldi-alarme-maison-montpellier.webp" alt="Aldi">
+                    <img src="Client-alarme-zozosécurité/aldi-alarme-maison-montpellier.webp" alt="Aldi - Système alarme commerce Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/bvlgari-entreprise-alarme-montpellier.svg" alt="Bvlgari">
+                    <img src="Client-alarme-zozosécurité/bvlgari-entreprise-alarme-montpellier.svg" alt="Bvlgari - Alarme entreprise luxe Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/aramisauto-alarme-sans-fil.webp" alt="Aramis Auto">
+                    <img src="Client-alarme-zozosécurité/aramisauto-alarme-sans-fil.webp" alt="Aramis Auto - Alarme sans fil professionnel Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/BUT-installateur-alarme-sans-fil.webp" alt="BUT">
+                    <img src="Client-alarme-zozosécurité/BUT-installateur-alarme-sans-fil.webp" alt="BUT - Installation alarme commerce Montpellier">
                 </div>
                 <div class="logo-item">
-                    <img src="Client-alarme-zozosécurité/le-kiosqueàpizza-installation-alarme-montpellier.svg" alt="Le Kiosque à Pizza">
+                    <img src="Client-alarme-zozosécurité/le-kiosqueàpizza-installation-alarme-montpellier.svg" alt="Le Kiosque à Pizza - Alarme restaurant Montpellier">
                 </div>
             </div>
         </div>
@@ -688,11 +705,11 @@
 
         <!-- Mobile Kit Image (Only visible on mobile) -->
         <div class="kit-mobile-container">
-            <img src="images/kit-alarme-mobile.png" alt="Kit alarme Ajax complet pour protection mobile" class="kit-mobile-image">
+            <img src="images/kit-alarme-mobile.png" alt="Kit alarme maison Ajax sans fil Montpellier" class="kit-mobile-image">
         </div>
 
         <div class="kit-image-container">
-            <img src="images/kit-alarme-pour-maison.webp" alt="Kit alarme Ajax complet pour maison" class="kit-main-image">
+            <img src="images/kit-alarme-pour-maison.webp" alt="Kit installation alarme maison Ajax Montpellier" class="kit-main-image">
 
             <!-- Component Labels -->
             <!-- Right side: Door/Window sensor -->
@@ -765,7 +782,7 @@
 
             <!-- Vertical Red Pill Background -->
             <div class="vertical-red-pill">
-                <img src="images/installation-alarme-montpellier-logo-comparision-table.png" alt="ZOZO Sécurité Logo" class="vertical-pill-logo">
+                <img src="images/installation-alarme-montpellier-logo-comparision-table.png" alt="ZOZO Sécurité installateur alarme Montpellier" class="vertical-pill-logo">
             </div>
 
             <!-- Left Column: Advantage List -->
@@ -851,7 +868,7 @@
                     <span class="google-rating-number">5.0</span>
                     <div class="google-stars">★★★★★</div>
                 </div>
-                <span class="google-reviews-count">Basé sur 80 avis Google</span>
+                <span class="google-reviews-count">Basé sur +100 avis Google</span>
             </div>
             <svg class="google-logo" viewBox="0 0 272 92" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#EA4335" d="M115.75 47.18c0 12.77-9.99 22.18-22.25 22.18s-22.25-9.41-22.25-22.18C71.25 34.32 81.24 25 93.5 25s22.25 9.32 22.25 22.18zm-9.74 0c0-7.98-5.79-13.44-12.51-13.44S80.99 39.2 80.99 47.18c0 7.9 5.79 13.44 12.51 13.44s12.51-5.55 12.51-13.44z"/>
@@ -1103,7 +1120,7 @@
         <div class="footer-container">
             <!-- Left Column: Company Info -->
             <div class="footer-column footer-company">
-                <img src="zozo16.9-no-background.webp" alt="Zozo Sécurité Logo" class="footer-logo">
+                <img src="zozo16.9-no-background.webp" alt="Zozo Sécurité installation alarme Montpellier" class="footer-logo">
                 <p class="footer-description">Votre installateur d'alarme de confiance à Montpellier. Plus de 1000 installations réussies depuis 10 ans.</p>
 
                 <div class="footer-contact">
