--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -538,7 +538,8 @@
             </div>
 
             <h1 class="hero-main-title">
-                Un cambriolage toutes <span class="no-break">les <span class="highlight-number">90</span> secondes</span><br>
+                <span class="desktop-first-line">Un cambriolage toutes <span class="no-break">les <span class="highlight-number">90</span> secondes</span></span>
+                <span class="mobile-first-line">Installation alarme Montpellier</span><br>
                 Sécurisez votre propriété 24/7<br>
                 Installation rapide<span class="side-note">* sans mensualité et sans engagement</span>
             </h1>
