--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -525,15 +525,41 @@
             <div class="mobile-property-selection">
                 <h2 class="mobile-selection-title">Que souhaitez-vous protéger ?</h2>
                 <div class="mobile-property-buttons">
-                    <a href="devis-alarme.html" class="mobile-property-btn">
-                        <span>Maison</span>
-                    </a>
-                    <a href="devis-alarme.html" class="mobile-property-btn">
-                        <span>Appartement</span>
-                    </a>
-                    <a href="devis-alarme.html" class="mobile-property-btn">
-                        <span>Entreprise</span>
-                    </a>
+                    <div class="split-border-card mobile-card">
+                        <img src="icon/Alarme-maison.svg" alt="Installation alarme maison Montpellier" class="card-icon">
+                        <div class="card-content-inner">
+                            <h2 class="card-title">Je protège ma<br>maison</h2>
+                            <a href="devis-alarme.html" class="card-button">
+                                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M2 12h20M15 5l7 7-7 7"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="split-border-card mobile-card">
+                        <img src="icon/alarme-pour-apartment.svg" alt="Installation alarme appartement Montpellier" class="card-icon">
+                        <div class="card-content-inner">
+                            <h2 class="card-title">Je protège mon appartement</h2>
+                            <a href="devis-alarme.html" class="card-button">
+                                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M2 12h20M15 5l7 7-7 7"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="split-border-card mobile-card">
+                        <img src="icon/alarme-professionels-entreprise.svg" alt="Installation alarme entreprise Montpellier" class="card-icon">
+                        <div class="card-content-inner">
+                            <h2 class="card-title">Je protège mon<br>entreprise</h2>
+                            <a href="devis-alarme.html" class="card-button">
+                                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M2 12h20M15 5l7 7-7 7"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
