--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -485,6 +485,80 @@
       ]
     }
     </script>
+
+    <!-- FAQ Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Pourquoi installer un système d'alarme ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Un système d'alarme protège votre habitation ou entreprise contre les cambriolages 24h/7j. Il dissuade les intrus, vous alerte en temps réel en cas d'intrusion et peut être couplé à la télésurveillance pour une intervention rapide. C'est un investissement essentiel pour votre tranquillité d'esprit."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "De quoi se composent les systèmes d'alarme Ajax ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nos systèmes Ajax incluent : une centrale intelligente, des détecteurs de mouvement avec caméra, des détecteurs d'ouverture pour portes/fenêtres, un clavier de commande, une sirène intérieure et extérieure, et l'application mobile pour le contrôle à distance. Tous les équipements communiquent sans fil de manière sécurisée."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Comment faire avec votre alarme en cas de déménagement ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nos systèmes sans fil Ajax sont entièrement transportables ! Lors de votre déménagement, nous pouvons désinstaller votre système et le réinstaller dans votre nouveau logement. Contactez-nous pour organiser le transfert de votre installation."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Quelle est la procédure si mon alarme ne marche plus ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Contactez-nous immédiatement par téléphone au 07 67 56 39 26. Notre équipe locale à Montpellier diagnostiquera le problème et interviendra rapidement. La plupart des problèmes sont résolus en moins de 24h."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Pourquoi équiper votre habitation ou entreprise d'un système d'alarme ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Un cambriolage a lieu toutes les 90 secondes en France. Une alarme visible dissuade 95% des cambrioleurs. Elle protège vos biens, votre famille et votre activité professionnelle. De plus, certaines assurances réduisent vos cotisations si vous êtes équipé d'un système d'alarme certifié."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Qu'est-ce que l'application mobile Ajax ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "L'application Ajax vous permet de contrôler votre alarme depuis n'importe où : armer/désarmer le système, recevoir des notifications instantanées, voir l'historique des événements, gérer les utilisateurs et vérifier l'état de tous vos détecteurs. Compatible iOS et Android."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Installez-vous des alarmes sans câble ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Oui, nos alarmes Ajax fonctionnent sur batterie et ne nécessitent aucun câblage. En tant qu'installateur alarme à Montpellier, nous vous garantissons une installation rapide, propre et sans endommager vos murs. Les batteries ont une autonomie exceptionnelle de 5 à 7 ans et sont facilement remplaçables. Le système vous alerte automatiquement lorsque les batteries doivent être changées."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Peut-on ajouter des détecteurs ou des caméras après l'installation initiale ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolument ! Les systèmes Ajax sont totalement évolutifs. Vous pouvez ajouter jusqu'à 150 détecteurs et 10 caméras sur une seule centrale. L'ajout de nouveaux équipements se fait simplement, sans travaux supplémentaires. Nos techniciens peuvent intervenir rapidement pour étendre votre système selon vos besoins : détecteurs de mouvement, détecteurs d'ouverture, caméras, sirènes, etc."
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
