--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Alarme Montpellier | Système sécurité alarme / vidéo</title>
+    <title>Installation Alarme Montpellier en 24h | Sans Mensualité | ZOZO Sécurité</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ZOZO Sécurité, installation alarme Montpellier. Systèmes sans fil, télésurveillance, installation rapide. +500 installations Hérault. Devis gratuit : 07 67 56 39 26.">
