--- a/index.html
+++ b/index.html
@@ -311,10 +311,7 @@
 
     <!-- Logo -->
     <a href="#accueil" class="site-logo">
-        <div class="logo-text">
-            <span class="logo-zozo">ZOZO</span>
-            <span class="logo-securite">SÉCURITÉ</span>
-        </div>
+        <img src="images/zozo16.9-white-text (no-bg).png" alt="ZOZO Sécurité - Vidéosurveillance Montpellier" class="logo-img">
     </a>
 
     <!-- Desktop Navigation -->
