changed the cta button

--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -644,7 +644,8 @@
                 <span class="desktop-first-line">Un cambriolage toutes <span class="no-break">les <span class="highlight-number">90</span> secondes</span></span>
                 <span class="mobile-first-line">Installation alarme Montpellier</span><br>
                 Sécurisez votre propriété 24/7<br>
-                Installation rapide<span class="side-note">* sans mensualité et sans engagement</span>
+                Installation alarme Montpellier<br>
+                <span class="side-note">* sans mensualité et sans engagement</span>
             </h1>
 
             <div class="split-border-card">
@@ -1230,7 +1231,7 @@
     <div class="sticky-cta-bar" id="stickyCTA">
         <div class="sticky-cta-content">
             <span class="sticky-cta-text">
-                <span class="sticky-text-desktop">Jusqu'au 31 décembre : -50€ sur votre devis • Installation d'alarme sous 24h</span>
+                <span class="sticky-text-desktop">Jusqu'au 31 décembre : Caméra WiFi offerte • Installation d'alarme sous 24h</span>
                 <span class="sticky-text-mobile">Offrez-vous une protection optimale, 24h/24</span>
             </span>
             <a href="devis-alarme.html" class="sticky-cta-button">
