--- a/blog.html
+++ b/blog.html
@@ -220,10 +220,7 @@
 
     <!-- Logo -->
     <a href="index.html" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
-        <div class="logo-text">
-            <span class="logo-zozo">ZOZO</span>
-            <span class="logo-securite">SÉCURITÉ</span>
-        </div>
+        <img src="images/zozo16.9-white-text (no-bg).png" alt="ZOZO Sécurité - Vidéosurveillance Montpellier" class="logo-img">
     </a>
 
     <!-- Desktop Navigation -->
