--- a/interphone-montpellier/installation-interphone-montpellier.html
+++ b/interphone-montpellier/installation-interphone-montpellier.html
@@ -595,10 +595,7 @@
 <body>
     <!-- Logo -->
     <a href="../index.html" class="site-logo">
-        <div class="logo-text">
-            <span class="logo-zozo">ZOZO</span>
-            <span class="logo-securite">SÉCURITÉ</span>
-        </div>
+        <img src="zozo16.9-no-background.webp" alt="Zozo Sécurité - Installation Interphone Montpellier" class="logo-img">
     </a>
 
     <!-- Desktop Navigation -->
@@ -651,53 +648,6 @@
                     Spécialiste en <strong>videosurveillance</strong> et <strong>installation interphone vidéo Montpellier</strong>.
                     Pose d'<strong>interphone</strong> et <strong>visiophone</strong> professionnelle. Devis gratuit sous 24h.
                 </p>
-
-                <!-- Google Reviews Summary -->
-                <div class="google-rating-summary" style="margin: 2rem 0; max-width: 450px;">
-                    <div class="google-logo">
-                        <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
-                            <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
-                            <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
-                            <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
-                            <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
-                        </svg>
-                        Google
-                    </div>
-                    <div class="rating-display">
-                        <div class="rating-stars">
-                            <svg class="star" viewBox="0 0 24 24">
-                                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-                            </svg>
-                            <svg class="star" viewBox="0 0 24 24">
-                                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-                            </svg>
-                            <svg class="star" viewBox="0 0 24 24">
-                                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-                            </svg>
-                            <svg class="star" viewBox="0 0 24 24">
-                                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-                            </svg>
-                            <svg class="star" viewBox="0 0 24 24">
-                                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-                            </svg>
-                        </div>
-                        <div>
-                            <div class="rating-text">5.0/5</div>
-                            <div class="review-count">80+ avis clients</div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Small review badge above CTA -->
-                <div class="small-review-badge">
-                    ⭐⭐⭐⭐⭐ 5.0 • +80 avis clients satisfaits
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" style="margin-left: 4px; vertical-align: middle;">
-                        <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
-                        <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
-                        <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
-                        <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
-                    </svg>
-                </div>
 
                 <a href="../contact.html" class="main-cta">
                     Demandez un devis gratuit
