--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -641,11 +641,13 @@
             </div>
 
             <h1 class="hero-main-title">
-                <span class="desktop-first-line">Un cambriolage toutes <span class="no-break">les <span class="highlight-number">90</span> secondes</span></span>
-                <span class="mobile-first-line">Installation alarme Montpellier</span><br>
+                <span class="desktop-first-line">Un cambriolage toutes <span class="no-break">les <span class="highlight-number">90</span> secondes</span><br>
                 Sécurisez votre propriété 24/7<br>
                 Installation alarme Montpellier<br>
-                <span class="side-note">* sans mensualité et sans engagement</span>
+                <span class="side-note">* sans mensualité et sans engagement</span></span>
+                <span class="mobile-first-line">Un cambriolage toutes <span class="no-break">les <span class="highlight-number">90</span> secondes</span><br>
+                Sécurisez votre propriété 24/7<br>
+                Installation alarme Montpellier</span>
             </h1>
 
             <div class="split-border-card">
